--- a/04-Matplotlib Exercises-completed.ipynb
+++ b/04-Matplotlib Exercises-completed.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## READ ME before reviewing code:\n",
+    "## <span style='color:red'>READ ME</span> before reviewing code:\n",
     "\n",
     "what I did in the following exercise:\n",
     "<ol>\n",
